errors.txt
src/7.1/cc/cc.c: In function ‘parse_command’:
src/7.1/cc/cc.c:6450:49: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
 6450 |                                 if (access(cfe, EX_OK) == -1) {
      |                                                 ^~~~~
      |                                                 X_OK
src/7.1/cc/cc.c:6450:49: note: each undeclared identifier is reported only once for each function it appears in
src/7.1/cc/cc.c: In function ‘error’:
src/7.1/cc/cc.c:8312:25: error: ‘sys_nerr’ undeclared (first use in this function)
 8312 |             if (errno < sys_nerr) {
      |                         ^~~~~~~~
src/7.1/cc/cc.c:8313:57: error: ‘sys_errlist’ undeclared (first use in this function)
 8313 |                 fprintf(stderr, "%s: %s\n", D_1000C1D8, sys_errlist[errno]);
      |                                                         ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘mkstr’:
src/7.1/cc/cc.c:9212:1: error: expected declaration specifiers before ‘va_dcl’
 9212 | va_dcl // K&R syntax
      | ^~~~~~
src/7.1/cc/cc.c:9220:18: error: macro "va_start" requires 2 arguments, but only 1 given
 9220 |     va_start(args);
      |                  ^
In file included from src/7.1/cc/cc.c:26:
/usr/lib/gcc/x86_64-linux-gnu/11/include/stdarg.h:47: note: macro "va_start" defined here
   47 | #define va_start(v,l)   __builtin_va_start(v,l)
      | 
src/7.1/cc/cc.c:9236:18: error: macro "va_start" requires 2 arguments, but only 1 given
 9236 |     va_start(args);
      |                  ^
In file included from src/7.1/cc/cc.c:26:
/usr/lib/gcc/x86_64-linux-gnu/11/include/stdarg.h:47: note: macro "va_start" defined here
   47 | #define va_start(v,l)   __builtin_va_start(v,l)
      | 
src/7.1/cc/cc.c:9253:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 9253 | void mklist(list* arg0) {
      |                         ^
src/7.1/cc/cc.c:9269:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘list’
 9269 |     list* arg0;
      |     ^~~~
src/7.1/cc/cc.c:9270:11: error: declaration for parameter ‘str’ but no such parameter
 9270 |     char* str;
      |           ^~~
src/7.1/cc/cc.c:9273:10: error: ‘arg0’ undeclared (first use in this function)
 9273 |     if ((arg0->length + 1) >= arg0->capacity) {
      |          ^~~~
src/7.1/cc/cc.c:9276:25: error: ‘sys_nerr’ undeclared (first use in this function)
 9276 |             if (errno < sys_nerr) {
      |                         ^~~~~~~~
src/7.1/cc/cc.c:9277:52: error: ‘sys_errlist’ undeclared (first use in this function)
 9277 |                 error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                    ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘addspacedstr’:
src/7.1/cc/cc.c:9303:29: error: ‘sys_nerr’ undeclared (first use in this function)
 9303 |                 if (errno < sys_nerr) {
      |                             ^~~~~~~~
src/7.1/cc/cc.c:9304:56: error: ‘sys_errlist’ undeclared (first use in this function)
 9304 |                     error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                        ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘save_place’:
src/7.1/cc/cc.c:9343:25: error: ‘sys_nerr’ undeclared (first use in this function)
 9343 |             if (errno < sys_nerr) {
      |                         ^~~~~~~~
src/7.1/cc/cc.c:9344:52: error: ‘sys_errlist’ undeclared (first use in this function)
 9344 |                 error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                    ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘addlist’:
src/7.1/cc/cc.c:9381:25: error: ‘sys_nerr’ undeclared (first use in this function)
 9381 |             if (errno < sys_nerr) {
      |                         ^~~~~~~~
src/7.1/cc/cc.c:9382:52: error: ‘sys_errlist’ undeclared (first use in this function)
 9382 |                 error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                    ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘adduldlist’:
src/7.1/cc/cc.c:9412:25: error: ‘sys_nerr’ undeclared (first use in this function)
 9412 |             if (errno < sys_nerr) {
      |                         ^~~~~~~~
src/7.1/cc/cc.c:9413:52: error: ‘sys_errlist’ undeclared (first use in this function)
 9413 |                 error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                    ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘savestr’:
src/7.1/cc/cc.c:9594:21: error: ‘sys_nerr’ undeclared (first use in this function)
 9594 |         if (errno < sys_nerr) {
      |                     ^~~~~~~~
src/7.1/cc/cc.c:9595:48: error: ‘sys_errlist’ undeclared (first use in this function)
 9595 |             error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘mktempstr’:
src/7.1/cc/cc.c:9643:25: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
 9643 |         (access(filter, EX_OK) == 0)) {
      |                         ^~~~~
      |                         X_OK
src/7.1/cc/cc.c: In function ‘run’:
src/7.1/cc/cc.c:9659:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9659 |     SIG_PF sp88;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9660:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9660 |     SIG_PF sp84;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9665:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
 9665 |     sysset_t sp34;
      |     ^~~~~~~~
      |     sigset_t
src/7.1/cc/cc.c:9697:21: error: ‘sys_nerr’ undeclared (first use in this function)
 9697 |         if (errno < sys_nerr) {
      |                     ^~~~~~~~
src/7.1/cc/cc.c:9698:48: error: ‘sys_errlist’ undeclared (first use in this function)
 9698 |             error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                ^~~~~~~~~~~
src/7.1/cc/cc.c:9780:21: error: request for member ‘word’ in something not a structure or union
 9780 |                 sp34.word[var_s0] = 0;
      |                     ^
src/7.1/cc/cc.c: In function ‘edit_src’:
src/7.1/cc/cc.c:9855:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9855 |     SIG_PF sp48;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9856:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9856 |     SIG_PF sp44;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9862:21: error: ‘sys_nerr’ undeclared (first use in this function)
 9862 |         if (errno < sys_nerr) {
      |                     ^~~~~~~~
src/7.1/cc/cc.c:9863:48: error: ‘sys_errlist’ undeclared (first use in this function)
 9863 |             error(5, NULL, 0, NULL, 0, "%s\n", sys_errlist[errno]);
      |                                                ^~~~~~~~~~~
src/7.1/cc/cc.c: In function ‘record_static_fileset’:
src/7.1/cc/cc.c:10560:23: error: ‘FILE’ has no member named ‘_file’; did you mean ‘_fileno’?
10560 |     ftruncate(sp28DC->_file, 0);
      |                       ^~~~~
      |                       _fileno
src/7.1/cc/cc.c: In function ‘func_00432940’:
src/7.1/cc/cc.c:10876:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
10876 |     sysset_t syscalls; // sp24
      |     ^~~~~~~~
      |     sigset_t
